--- a/src/main/frontend/src/App.css
+++ b/src/main/frontend/src/App.css
@@ -14,7 +14,13 @@ body{
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: rgb(133, 111, 111);
-  color: white;
+  background-color: rgb(197,184,165);
+  color: rgb(255, 255, 255);
   margin-top: 0px;
+}
+
+.dFlex{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
